# dsncompat

./: .build-bot.conf  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  README  README.md  config.h.in  static_assert.h  string.h
string/: strcasecmp.c  stricmp.c  strncasecmp.c  strnicmp.c  strtolower.c  strtoupper.c  test-strcasecmp.c  test-stricmp.c  test-strncasecmp.c  test-strnicmp.c  test-strtolower.c  test-strtoupper.c
